updated author list from Sam

--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -16,18 +16,18 @@
 
 % Authors in alphabetical order
 \author[g]{R.~Acciarri}
-\author[aa]{C.~Adams}
+\author[bb]{C.~Adams}
 \author[h]{R.~An}
 \author[c]{J.~Anthony}
-\author[x]{J.~Asaadi}
+\author[y]{J.~Asaadi}
 \author[a]{M.~Auger}
 \author[g]{L.~Bagby}
-\author[aa]{S.~Balasubramanian}
+\author[bb]{S.~Balasubramanian}
 \author[g]{B.~Baller}
 \author[n]{C.~Barnes}
 \author[q]{G.~Barr}
 \author[q]{M.~Bass}
-\author[y]{F.~Bay}
+\author[z]{F.~Bay}
 \author[b]{M.~Bishai}
 \author[j]{A.~Blake}
 \author[i]{T.~Bolton}
@@ -52,20 +52,20 @@
 \author[a]{A.~Ereditato}
 \author[c]{L.~Escudero Sanchez}
 \author[v]{J.~Esquivel}
-\author[aa]{B.~T.~Fleming}
+\author[bb]{B.~T.~Fleming}
 \author[d]{W.~Foreman}
 \author[l]{A.~P.~Furmanski}
 \author[l]{D.~Garcia-Gamez}
 \author[k]{G.~T.~Garvey}
 \author[f]{V.~Genty}
 \author[a]{D.~Goeldi}
-\author[i]{S.~Gollapinni}
+\author[i,x]{S.~Gollapinni}
 \author[s]{N.~Graf}
-\author[aa]{E.~Gramellini}
+\author[bb]{E.~Gramellini}
 \author[g]{H.~Greenlee}
 \author[e]{R.~Grosso}
 \author[q]{R.~Guenette}
-\author[aa]{A.~Hackenburg}
+\author[bb]{A.~Hackenburg}
 \author[v]{P.~Hamilton}
 \author[m]{O.~Hen}
 \author[l]{J.~Hewes}
@@ -75,7 +75,7 @@
 \author[k]{E.-C.~Huang}
 \author[g]{C.~James}
 \author[c]{J.~Jan~de~Vries}
-\author[z]{C.-M.~Jen}
+\author[aa]{C.-M.~Jen}
 \author[s]{L.~Jiang}
 \author[e]{R.~A.~Johnson}
 \author[b]{J.~Joshi}
@@ -96,9 +96,9 @@
 \author[k]{W.~C.~Louis}
 \author[a]{M.~Luethi}
 \author[g]{B.~Lundberg}
-\author[aa]{X.~Luo}
+\author[bb]{X.~Luo}
 \author[g]{A.~Marchionni}
-\author[z]{C.~Mariani}
+\author[aa]{C.~Mariani}
 \author[c]{J.~Marshall}
 \author[h]{D.~A.~Martinez~Caicedo}
 \author[i]{V.~Meddage}
@@ -115,7 +115,7 @@
 \author[g]{O.~Palamara}
 \author[s]{V.~Paolone}
 \author[o]{V.~Papavassiliou}
-\author[o]{S.F.~Pate}
+\author[o]{S.~F.~Pate}
 \author[g]{Z.~Pavlovic}
 \author[w]{E.~Piasetzky}
 \author[l]{D.~Porzio}
@@ -125,7 +125,7 @@
 \author[i]{A.~Rafique}
 \author[u]{L.~Rochester}
 \author[a]{C.~Rudolf~von~Rohr}
-\author[aa]{B.~Russell}
+\author[bb]{B.~Russell}
 \author[d]{D.~W.~Schmitz}
 \author[g]{A.~Schukraft}
 \author[f]{W.~Seligman}
@@ -145,7 +145,7 @@
 \author[c]{M.~Thomson}
 \author[g]{M.~Toups}
 \author[u]{Y.-T.~Tsai}
-\author[aa]{S.~Tufanli}
+\author[bb]{S.~Tufanli}
 \author[u]{T.~Usher}
 \author[k]{R.~G.~Van~de~Water}
 \author[b]{B.~Viren}
@@ -184,10 +184,12 @@
 \affiliation[u]{SLAC National Accelerator Laboratory, Menlo Park, CA, 94025, USA}
 \affiliation[v]{Syracuse University, Syracuse, NY, 13244, USA}
 \affiliation[w]{Tel Aviv University, Tel Aviv, Israel, 69978}
-\affiliation[x]{University of Texas, Arlington, TX, 76019, USA}
-\affiliation[y]{TUBITAK Space Technologies Research Institute, METU Campus, TR-06800, Ankara, Turkey}
-\affiliation[z]{Center for Neutrino Physics, Virginia Tech, Blacksburg, VA, 24061, USA}
-\affiliation[aa]{Yale University, New Haven, CT, 06520, USA}
+\affiliation[x]{University of Tennessee, Knoxville, TN, 37996, USA}
+\affiliation[y]{University of Texas, Arlington, TX, 76019, USA}
+\affiliation[z]{TUBITAK Space Technologies Research Institute, METU Campus, TR-06800, Ankara, Turkey}
+\affiliation[aa]{Center for Neutrino Physics, Virginia Tech, Blacksburg, VA, 24061, USA}
+\affiliation[bb]{Yale University, New Haven, CT, 06520, USA}
+
 
 
 
